# FileHandlers

./: main.py  pyproject.toml
examples/: convert_nc_data.py  preallocate_large_array.py
filehandler/: __init__.py
filehandler/grid/: utils.py  writer.py
src/grid/: loader.py  utils.py  writer.py
tests/: __init__.py  test_writer.py
