[project]
name = "filehandler"
version = "0.1.0"
description = "Python Classes to manage various data loading and writing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask[array]>=2025.5.1",
    "netcdf4>=1.7.2",
    "rasterio>=1.4.3",
    "rioxarray>=0.15.0",
    "xarray>=2024.7.0",
    "zarr>=3.0.8",
]
authors = [
    {name = "sitscholl", email = "sitscholl@eurac.edu"},
]
urls = {Homepage = "https://github.com/sitscholl/FileHandlers"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["filehandler"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
